--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <body>
-    <h1>Welcome to my website!</h1>
+    <h1>Welcome to my Helpful website for ur needs!</h1>
     <p>This is a basic website hosted on GitHub Pages.</p>
   </body>
 </html>
