--- a/index.html
+++ b/index.html
@@ -1,3 +1,35 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title>My Website</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+
+  <header>
+    <h1>Welcome to My Website</h1>
+    <p>Built and hosted with GitHub Pages 🚀</p>
+  </header>
+
+  <main>
+    <section class="card">
+      <h2>About Me</h2>
+      <p>This is my first website. I made it myself!</p>
+    </section>
+
+    <section class="card">
+      <h2>My Projects</h2>
+      <p>More cool stuff coming soon.</p>
+    </section>
+  </main>
+
+  <footer>
+    <p>© 2026 My Name Sumfre KLW </p>
+  </footer>
+
+</body>
+</html>
 <html>
   <body>
     <h1>Welcome to my Helpful website for ur needs!</h1>
