--- a/index.html
+++ b/index.html
@@ -39,14 +39,15 @@
   <h2>History</h2>
   <table>
     <thead>
-      <tr>
-        <th>Item</th>
-        <th>Type</th>
-        <th>Description</th>
-        <th>Amount</th>
-      </tr>
-    </thead>
-    <tbody id="records"></tbody>
+  <tr>
+    <th>Date</th>
+    <th>Item</th>
+    <th>Type</th>
+    <th>Description</th>
+    <th>Amount</th>
+  </tr>
+</thead>
+   <tbody id="records"></tbody>
   </table>
 </div>
 
